debug_output_final_2.txt
   Compiling mincaml_to_bf v0.1.0 (/Users/koharayu/Desktop/大学/cpu実験/mincaml_to_bf)
warning: unused import: `self`
 --> src/intermediate.rs:2:22
  |
2 | use crate::closure::{self, Prog as ClosureProg};
  |                      ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::convert::TryInto`
 --> src/virtual_interpreter.rs:2:5
  |
2 | use std::convert::TryInto;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `Write` and `self`
 --> src/virtual_interpreter.rs:3:15
  |
3 | use std::io::{self, Write};
  |               ^^^^  ^^^^^

error[E0308]: mismatched types
   --> src/intermediate.rs:314:9
    |
312 |     converter.add_block(
    |               --------- arguments to this method are incorrect
313 |         "prelude".to_string(),
314 |         BlockedTerm::TailCallBlock(entry_label.clone()),
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `intermediate::Term`, found `blocked::Term`
    |
    = note: `blocked::Term` and `intermediate::Term` have similar names, but are actually distinct types
note: `blocked::Term` is defined in module `crate::blocked` of the current crate
   --> src/blocked.rs:13:1
    |
 13 | pub enum Term {
    | ^^^^^^^^^^^^^
note: `intermediate::Term` is defined in module `crate::intermediate` of the current crate
   --> src/intermediate.rs:47:1
    |
 47 | pub enum Term {
    | ^^^^^^^^^^^^^
note: method defined here
   --> src/intermediate.rs:78:8
    |
 78 |     fn add_block(&mut self, id: id::L, term: Term) {
    |        ^^^^^^^^^                       ----------

warning: unused variable: `push_ops`
   --> src/blocked.rs:154:29
    |
154 |                     let mut push_ops: Vec<Term> = Vec::new();
    |                             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_push_ops`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/blocked.rs:154:25
    |
154 |                     let mut push_ops: Vec<Term> = Vec::new();
    |                         ----^^^^^^^^
    |                         |
    |                         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `i`
   --> src/blocked.rs:469:14
    |
469 |         for (i, (arg, ty)) in fundef.args.iter().enumerate() {
    |              ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: unused variable: `x`
   --> src/intermediate.rs:150:32
    |
150 |             BlockedTerm::GetSp(x) => self.bind_atom(Atom::GetSp, dest, next),
    |                                ^ help: if this is intentional, prefix it with an underscore: `_x`

warning: value assigned to `block_count` is never read
   --> src/intermediate.rs:363:13
    |
363 |     let mut block_count = 0;
    |             ^^^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `var_count` is never read
   --> src/intermediate.rs:364:13
    |
364 |     let mut var_count = 0; // Max var count across all functions (for global stats, if needed)
    |             ^^^^^^^^^
    |
    = help: maybe it is overwritten before being read?

warning: unused variable: `entry_label`
   --> src/intermediate.rs:359:5
    |
359 |     entry_label: &id::L,
    |     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_entry_label`

warning: variable does not need to be mutable
   --> src/intermediate.rs:381:9
    |
381 |     let mut map_args = |func_name: &str, map: &mut HashMap<id::T, usize>, count: &mut usize| {
    |         ----^^^^^^^^
    |         |
    |         help: remove this `mut`

warning: unused variable: `e1`
   --> src/k_normal.rs:101:28
    |
101 |         syntax::Syntax::Eq(e1, e2) | syntax::Syntax::LE(e1, e2) => g(
    |                            ^^                           ^^
    |
help: if this is intentional, prefix it with an underscore
    |
101 |         syntax::Syntax::Eq(_e1, e2) | syntax::Syntax::LE(_e1, e2) => g(
    |                            +                             +

warning: unused variable: `e2`
   --> src/k_normal.rs:101:32
    |
101 |         syntax::Syntax::Eq(e1, e2) | syntax::Syntax::LE(e1, e2) => g(
    |                                ^^                           ^^
    |
help: if this is intentional, prefix it with an underscore
    |
101 |         syntax::Syntax::Eq(e1, _e2) | syntax::Syntax::LE(e1, _e2) => g(
    |                                +                             +

warning: unused variable: `args`
   --> src/k_normal.rs:209:25
    |
209 |                     let args: Vec<id::T> = Vec::new();
    |                         ^^^^ help: if this is intentional, prefix it with an underscore: `_args`

warning: unused variable: `entry_idx`
   --> src/virtual.rs:139:9
    |
139 |     let entry_idx = *block_map.get(&prog.entry).unwrap(); // Should be 1
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_entry_idx`

warning: unused variable: `i`
   --> src/virtual.rs:141:10
    |
141 |     for (i, block) in sorted_blocks {
    |          ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: unused variable: `l`
   --> src/virtual.rs:429:24
    |
429 |         Atom::ExtArray(l) => {
    |                        ^ help: if this is intentional, prefix it with an underscore: `_l`

warning: unused variable: `self_ptr`
   --> src/virtual_interpreter.rs:165:25
    |
165 |                     let self_ptr = self.read_int(sp - 32);
    |                         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_self_ptr`

warning: unused variable: `addr`
   --> src/virtual_interpreter.rs:205:34
    |
205 |             Operation::InputByte(addr) => {
    |                                  ^^^^ help: if this is intentional, prefix it with an underscore: `_addr`

For more information about this error, try `rustc --explain E0308`.
warning: `mincaml_to_bf` (lib) generated 19 warnings
error: could not compile `mincaml_to_bf` (lib) due to 1 previous error; 19 warnings emitted
